# nonogram_game

./: CMakeLists.txt  DownloadGTestGMock.cmake  GTestGMock.CMakeLists.cmake.in  README.md
nonogram/: CMakeLists.txt
nonogram/include/: i_nonogram.hpp  nonogram_cell_state.hpp  nonogram_factory.hpp
nonogram/src/impl/: nonogram.cpp  nonogram_factory.cpp  nonogram_log.cpp
nonogram/src/incl/: i_nonogram_log.hpp  nonogram.hpp  nonogram_log.hpp
nonogram/test/: CMakeLists.txt  nonogram_test.cpp
nonogram/test/mocks_include/: mock_nonogram.hpp  mock_nonogram_log.hpp
nonogram_gui/: CMakeLists.txt  qml.qrc
nonogram_gui/resources/: ColumnNumbersDelegate.qml  ColumnNumbersRectangle.qml  NonogramCanvas.qml  NonogramDelegate.qml  NonogramFieldRectangle.qml  NonogramRectDelegate.qml  RowNumbersDelegate.qml  RowNumbersRectangle.qml  main.qml  scripts.js
nonogram_gui/src/impl/: column_numbers_model.cpp  main.cpp  nonogram_field_model.cpp  nonogram_rect_model.cpp  nonogram_wrapper.cpp  row_numbers_model.cpp
nonogram_gui/src/incl/: column_numbers_model.hpp  nonogram_field_model.hpp  nonogram_rect_model.hpp  nonogram_wrapper.hpp  row_numbers_model.hpp
